--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,67 @@
-# This file contains all the dependencies in my virtual environment used to run the application
 annotated-types==0.7.0
+asgiref==3.8.1
 blis==1.3.0
 catalogue==2.0.10
 certifi==2025.6.15
 charset-normalizer==3.4.2
 ChatterBot==1.2.3
+chatterbot-corpus==1.2.2
 click==8.2.1
 cloudpathlib==0.21.1
 confection==0.1.5
+contourpy==1.3.2
+cycler==0.12.1
 cymem==2.0.11
+Django==5.2.3
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+fonttools==4.58.4
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
+llvmlite==0.44.0
 marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mathparse==0.1.2
+matplotlib==3.10.3
 mdurl==0.1.2
 murmurhash==1.0.13
-numpy==2.3.1
+numba==0.61.2
+numpy==2.2.6
 packaging==25.0
-pillow==11.3.0
+pillow==11.2.1
 preshed==3.0.10
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyod==2.0.5
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
 qrcode==8.2
 requests==2.32.4
 rich==14.0.0
+scikit-learn==1.7.0
+scipy==1.16.0
 setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
-smart_open==7.3.0.post1
+smart-open==7.1.0
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.41
+sqlparse==0.5.3
 srsly==2.5.1
 thinc==8.3.6
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typer==0.16.0
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.14.0
 urllib3==2.5.0
 wasabi==1.1.3
 weasel==0.4.1
